Prepare for initial Heroku push

--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
     "lib": "lib",
     "test": "test"
   },
+  "engines": {
+    "node": "8.9.4",
+    "npm": "5.6.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack --watch"
+    "webpack": "webpack --watch",
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
