--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fullstack",
+  "name": "starTable",
   "private": true,
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -13,9 +13,11 @@
     "react-router-dom": "^4.2.2",
     "react-slick": "^0.23.1",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "webpack": "^3.4.1"
+  },
+  "devDependencies": {
+    "redux-logger": "^3.0.6"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
